[gd_scene load_steps=5 format=2]

[ext_resource path="res://games/GoetheCardMiniGame/Assets/Images/GoetheCardFront.png" type="Texture" id=1]
[ext_resource path="res://games/GoetheCardMiniGame/Assets/Images/GoetheCardBack.png" type="Texture" id=2]
[ext_resource path="res://games/GoetheCardMiniGame/Assets/Scripts/Card.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 102.538, 64.6939 )

[node name="Card" type="Area2D"]
light_mask = 16
z_index = 1
z_as_relative = false
script = ExtResource( 3 )

[node name="CardBack" type="Sprite" parent="."]
scale = Vector2( 0.15, 0.15 )
texture = ExtResource( 2 )

[node name="CardFront" type="Sprite" parent="."]
scale = Vector2( 0.15, 0.15 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.21022, 0 )
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0

[node name="Tween" type="Tween" parent="."]
[connection signal="body_entered" from="." to="." method="_on_Card_body_entered"]
[connection signal="input_event" from="." to="." method="_on_Card_input_event"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
